# app/api/api.bm.go
@@ -17,10 +17,15 @@ var _ context.Context
 var _ binding.StructValidator
 
 var PathAppGetGoodsList = "/app/getGoodsList"
+var PathAppGetGoodsDetail = "/app/getGoodsDetail"
 
 // AppBMServer is the server API for App service.
 type AppBMServer interface {
+	// 获取商品列表
 	GetGoodsList(ctx context.Context, req *goods_service_v1.GoodsReq) (resp *goods_service_v1.GoodsListRes, err error)
+
+	// 获取商品详情
+	GetGoodsDetail(ctx context.Context, req *goods_service_v1.GoodsDetailReq) (resp *goods_service_v1.GoodsRes, err error)
 }
 
 var AppSvc AppBMServer
@@ -34,8 +39,18 @@ func appGetGoodsList(c *bm.Context) {
 	c.JSON(resp, err)
 }
 
+func appGetGoodsDetail(c *bm.Context) {
+	p := new(goods_service_v1.GoodsDetailReq)
+	if err := c.BindWith(p, binding.Default(c.Request.Method, c.Request.Header.Get("Content-Type"))); err != nil {
+		return
+	}
+	resp, err := AppSvc.GetGoodsDetail(c, p)
+	c.JSON(resp, err)
+}
+
 // RegisterAppBMServer Register the blademaster route
 func RegisterAppBMServer(e *bm.Engine, server AppBMServer) {
 	AppSvc = server
 	e.GET("/app/getGoodsList", appGetGoodsList)
+	e.GET("/app/getGoodsDetail", appGetGoodsDetail)
 }
