# app/api/api.swagger.json
@@ -16,9 +16,45 @@
         "application/json"
     ],
     "paths": {
+        "/app/getGoodsDetail": {
+            "get": {
+                "summary": "获取商品详情",
+                "responses": {
+                    "200": {
+                        "description": "A successful response.",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "code": {
+                                    "type": "integer"
+                                },
+                                "message": {
+                                    "type": "string"
+                                },
+                                "data": {
+                                    "$ref": "#/definitions/.goods.service.v1.GoodsRes"
+                                }
+                            }
+                        }
+                    }
+                },
+                "parameters": [
+                    {
+                        "name": "id",
+                        "description": "商品id",
+                        "in": "query",
+                        "required": false,
+                        "type": "integer"
+                    }
+                ],
+                "tags": [
+                    "app.service.v1.App"
+                ]
+            }
+        },
         "/app/getGoodsList": {
             "get": {
-                "summary": "/app/getGoodsList",
+                "summary": "获取商品列表",
                 "responses": {
                     "200": {
                         "description": "A successful response.",
@@ -41,18 +77,21 @@
                 "parameters": [
                     {
                         "name": "isHot",
+                        "description": "是否是热销 1:是、0:否",
                         "in": "query",
                         "required": false,
                         "type": "integer"
                     },
                     {
                         "name": "page",
+                        "description": "页数",
                         "in": "query",
                         "required": false,
                         "type": "integer"
                     },
                     {
                         "name": "size",
+                        "description": "每页数量",
                         "in": "query",
                         "required": false,
                         "type": "integer"
@@ -65,6 +104,16 @@
         }
     },
     "definitions": {
+        ".goods.service.v1.GoodsDetailReq": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "description": "商品id"
+                }
+            },
+            "description": "商品详情Req"
+        },
         ".goods.service.v1.GoodsListRes": {
             "type": "object",
             "properties": {
@@ -72,47 +121,60 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/.goods.service.v1.GoodsRes"
-                    }
+                    },
+                    "description": "商品列表"
                 },
                 "total": {
-                    "type": "integer"
+                    "type": "integer",
+                    "description": "商品总数"
                 }
-            }
+            },
+            "description": "商品列表Res"
         },
         ".goods.service.v1.GoodsReq": {
             "type": "object",
             "properties": {
                 "isHot": {
-                    "type": "integer"
+                    "type": "integer",
+                    "description": "是否是热销 1:是、0:否"
                 },
                 "page": {
-                    "type": "integer"
+                    "type": "integer",
+                    "description": "页数"
                 },
                 "size": {
-                    "type": "integer"
+                    "type": "integer",
+                    "description": "每页数量"
                 }
-            }
+            },
+            "description": "商品列表Req"
         },
         ".goods.service.v1.GoodsRes": {
             "type": "object",
             "properties": {
                 "id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "description": "商品id"
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "description": "商品名称"
                 },
                 "retail_price": {
                     "type": "number",
-                    "format": "double"
+                    "format": "double",
+                    "description": "零食价格"
                 },
                 "goods_brief": {
-                    "type": "string"
+                    "type": "string",
+                    "description": "商品简介"
                 },
                 "list_pic_url": {
-                    "type": "string"
+                    "type": "string",
+                    "description": "商品图片"
                 }
-            }
+            },
+            "description": "商品详情Res"
         }
     }
 }
