# common/goods/api/api.bm.go
@@ -1,13 +1,13 @@
 // Code generated by protoc-gen-bm v0.1, DO NOT EDIT.
-// source: api.proto
+// source: easymarketgoserve/common/goods/api/api.proto
 
 package api
 
 import (
 	"context"
 
-	bm "github.com/bilibili/kratos/pkg/net/http/blademaster"
-	"github.com/bilibili/kratos/pkg/net/http/blademaster/binding"
+	bm "github.com/go-kratos/kratos/pkg/net/http/blademaster"
+	"github.com/go-kratos/kratos/pkg/net/http/blademaster/binding"
 )
 
 // to suppressed 'imported but not used warning'
@@ -20,15 +20,17 @@ var PathGoodsGetGoodsList = "/goods/getGoodsList"
 
 // GoodsBMServer is the server API for Goods service.
 type GoodsBMServer interface {
-	GetGoodsDetail(ctx context.Context, req *GoodsReq) (resp *GoodsRes, err error)
+	// 获取商品详情
+	GetGoodsDetail(ctx context.Context, req *GoodsDetailReq) (resp *GoodsRes, err error)
 
+	// 获取商品列表
 	GetGoodsList(ctx context.Context, req *GoodsReq) (resp *GoodsListRes, err error)
 }
 
 var GoodsSvc GoodsBMServer
 
 func goodsGetGoodsDetail(c *bm.Context) {
-	p := new(GoodsReq)
+	p := new(GoodsDetailReq)
 	if err := c.BindWith(p, binding.Default(c.Request.Method, c.Request.Header.Get("Content-Type"))); err != nil {
 		return
 	}
